--- a/src/app/dropdown/dropdown.component.html
+++ b/src/app/dropdown/dropdown.component.html
@@ -1,1 +1,18 @@
-<p>dropdown works!</p>
+<!-- dropdown.component.html -->
+
+<div>
+  <select [(ngModel)]="selectedCountry" (change)="onCountryChange(selectedCountry)">
+    <option value="">Select Country</option>
+    <option *ngFor="let country of countries" [value]="country.rowId">{{ country.countryName }}</option>
+  </select>
+
+  <select [(ngModel)]="selectedState" (change)="onStateChange(selectedState)">
+    <option value="">Select State</option>
+    <option *ngFor="let state of states" [value]="state.rowId">{{ state.stateName }}</option>
+  </select>
+
+  <select [(ngModel)]="selectedCity">
+    <option value="">Select City</option>
+    <option *ngFor="let city of cities" [value]="city.rowId">{{ city.cityName }}</option>
+  </select>
+</div>
